--- a/src/sys/resources-sample/scss/extend/normalise.scss
+++ b/src/sys/resources-sample/scss/extend/normalise.scss
@@ -1,4 +1,4 @@
-@import "var-shape.scss";
+@import "var-shape";
 
 address, html, body, article, aside, audio, blockquote, canvas, dd, div, dl, fieldset, figcaption, figure, form, h1, h2, h3, h4, h5, h6, header, noscript, output, p, pre, section, video {
 	@extend %display-block;
